# Alltrader

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cli_tui.py  docker-compose.yml  macd_backtest_run.py  main.py  pyproject.toml
app/: backtest_ui.py
connector/: __init__.py  binance_kline.py  binance_open_interest.py  binance_order.py  example_fetch.py  okx_kline.py  okx_order.py  okx_ws_ticker.py
data/: BTC_USDT_1m_okx_swap.csv  debug_15m.csv  debug_1h.csv
datawarehouse/: kline.db  kline_db.py
engine/: state.py  trader.py
engine/backtest/: backtest.py  rms.py
engine/online/: logging.py  oms.py  online_trader.py  rms.py
grafana/: api.py  db.py
grafana-data/: grafana.db
output/: trade_records.csv
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16386  16392  16393  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: 2619  pg_internal.init
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
script/: backtest_run.py  fundingrate.py  get_backtest_data.py  kline.py
strategy/: long.py  longstrategy.py  macd_strategy.py  short.py  shortstrategy.py  simple_entry_exit_strategy.py
test/: EMA.py
utils/: strategy_utils.py
