[project]
name = "live-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binance-sdk-derivatives-trading-usds-futures>=1.8.0",
    "binance-sdk-spot>=3.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "textual>=6.11.0",
    "typer>=0.21.0",
]
